--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 10</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <input type="text" id="search-box" />
     <ul class="country-list"></ul>
     <div class="country-info"></div>
+<!-- ex -->
 
-    <script src="index.js"></script>
+<div class="pokemon"></div> 
+
+<form class="form-inline search-form js-search-form">
+      <div class="form-group">
+        <input type="text" class="form-control" name="query" />
+      </div>
+
+      <button type="submit" class="btn btn-primary">Искать</button>
+  </form>
+
+    <div class="js-card-container"></div>
+
+
+
+    <script type = "module" src="./index.js"></script>
   </body>
 </html>
