--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,22 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <!-- <link rel="stylesheet" href="dist/notiflix-3.2.5.min.css" /> -->
   </head>
   <body>
     <input type="text" id="search-box" />
     <ul class="country-list"></ul>
-    <div class="country-info"></div>
+    <div class="country-info">
+
+
+    </div>
+
+
+
+
 <!-- ex -->
 
-<div class="pokemon"></div> 
+<!-- <div class="pokemon"></div> 
 
 <form class="form-inline search-form js-search-form">
       <div class="form-group">
@@ -29,9 +37,16 @@
   </form>
 
     <div class="js-card-container"></div>
+ -->
 
-
-
+    <!-- <script src="dist/notiflix-3.2.5.min.js"></script> -->
+       <!-- <script
+      async
+      src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
+      integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script> -->
     <script type = "module" src="./index.js"></script>
   </body>
 </html>
