--- a/src/index.html
+++ b/src/index.html
@@ -16,28 +16,7 @@
   <body>
     <input type="text" id="search-box" />
     <ul class="country-list"></ul>
-    <div class="country-info">
-
-
-    </div>
-
-
-
-
-<!-- ex -->
-
-<!-- <div class="pokemon"></div> 
-
-<form class="form-inline search-form js-search-form">
-      <div class="form-group">
-        <input type="text" class="form-control" name="query" />
-      </div>
-
-      <button type="submit" class="btn btn-primary">Искать</button>
-  </form>
-
-    <div class="js-card-container"></div>
- -->
+    <div class="country-info"></div>
 
     <!-- <script src="dist/notiflix-3.2.5.min.js"></script> -->
        <!-- <script
